syntax = "proto3";

package example;

option go_package = "gitlab.io/paas/example";

import "local/custom.proto";

message Request {}

message Response {}

service Example {
  rpc Unary(local.CustomEmpty) returns (Response);
  rpc ClientSideStream(stream Request) returns (Response);
  rpc ServerSideStream(Request) returns (stream Response);
  rpc BidirectionalStream(stream Request) returns (stream Response);
}